started moving to rails 3

--- a/app/views/layouts/posts.rhtml
+++ b/app/views/layouts/posts.rhtml
@@ -42,7 +42,8 @@
 
 <%= render :partial => 'posts/party_file' %>
 
-<%= @content_for_layout %>
+<%= yield %>
+
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
