got the replies listing working

--- a/app/views/replies/list.html.erb
+++ b/app/views/replies/list.html.erb
@@ -1,6 +1,6 @@
 <div id='posts'>
 
-  <%= render :partial => 'post' %>
+  <%= render :partial => 'post', :object => @post %>
   
   <%= render :partial => "post", :collection => @post.replies, :as => :post %>
   
